--- a/econometric_models/arima.ipynb
+++ b/econometric_models/arima.ipynb
@@ -10552,7 +10552,7 @@
          }
         },
         "title": {
-         "text": "DLINKINDIA Stock High & Low Price Prediction using ARIMA"
+         "text": "DLINKINDIA.csv Stock High & Low Price Prediction using ARIMA"
         },
         "xaxis": {
          "title": {
@@ -10578,7 +10578,7 @@
     "fig.add_trace(go.Scatter(x=data.index, y=data['forecast_high'], name='Forecast High Price'))\n",
     "fig.add_trace(go.Scatter(x=data.index, y=data['low'], name='Actual Low Price'))\n",
     "fig.add_trace(go.Scatter(x=data.index, y=data['forecast_low'], name='Forecast Low Price'))\n",
-    "fig.update_layout(title='DLINKINDIA Stock High & Low Price Prediction using ARIMA', xaxis_title='Date', yaxis_title='Price')\n",
+    "fig.update_layout(title=f'{file_name} Stock High & Low Price Prediction using ARIMA', xaxis_title='Date', yaxis_title='Price')\n",
     "fig.show()\n"
    ]
   },
