WIP: GARCH model
Changes to be committed:
	modified:   econometric_models/arima.ipynb
	new file:   econometric_models/garch.ipynb
	modified:   requirements.txt

--- a/econometric_models/arima.ipynb
+++ b/econometric_models/arima.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "[7940 rows x 5 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "2023-07-31  307.65  307.65  288.10  298.30   972858"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,12 +351,12 @@
     "data.dropna(inplace=True)\n",
     "\n",
     "\n",
-    "data.tail(10)"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,6 @@
     "# Suppress warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "data = data[['high', 'low']]\n",
     "\n",
     "# Define a function to fit ARIMA model and make predictions\n",
     "def predict_stock_high_low(data, order, forecast_length):\n",
@@ -392,130 +391,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARIMA(0, 0, 0) MSE=58960.516625076314\n",
-      "ARIMA(0, 0, 1) MSE=50973.51502420948\n",
-      "ARIMA(0, 0, 2) MSE=45164.50232361118\n",
-      "ARIMA(0, 0, 3) MSE=37749.59667089659\n",
-      "ARIMA(0, 0, 4) MSE=31069.857383386705\n",
-      "ARIMA(0, 0, 5) MSE=25173.53953818611\n",
-      "ARIMA(0, 1, 0) MSE=804.2375\n",
-      "ARIMA(0, 1, 1) MSE=825.2468394747582\n",
-      "ARIMA(0, 1, 2) MSE=812.3833989455165\n",
-      "ARIMA(0, 1, 3) MSE=823.2868092312918\n",
-      "ARIMA(0, 1, 4) MSE=899.6281716848648\n",
-      "ARIMA(0, 1, 5) MSE=892.7248063721288\n",
-      "ARIMA(0, 2, 0) MSE=2517.464000001987\n",
-      "ARIMA(0, 2, 1) MSE=840.5970316561178\n",
-      "ARIMA(0, 2, 2) MSE=857.8676089481668\n",
-      "ARIMA(0, 2, 3) MSE=843.5363144241284\n",
-      "ARIMA(0, 2, 4) MSE=851.4075663338913\n",
-      "ARIMA(0, 2, 5) MSE=927.6158211326998\n",
-      "ARIMA(1, 0, 0) MSE=780.9580621312527\n",
-      "ARIMA(1, 0, 1) MSE=798.8332006942223\n",
-      "ARIMA(1, 0, 2) MSE=787.2150920091652\n",
-      "ARIMA(1, 0, 3) MSE=795.083537008214\n",
-      "ARIMA(1, 0, 4) MSE=892.7394646495798\n",
-      "ARIMA(1, 0, 5) MSE=884.5665635892422\n",
-      "ARIMA(1, 1, 0) MSE=825.9760041974396\n",
-      "ARIMA(1, 1, 1) MSE=792.8334038391404\n",
-      "ARIMA(1, 1, 2) MSE=863.1158916378561\n",
-      "ARIMA(1, 1, 3) MSE=894.0731685259534\n",
-      "ARIMA(1, 1, 4) MSE=894.4600805040293\n",
-      "ARIMA(1, 1, 5) MSE=839.1048478402217\n",
-      "ARIMA(1, 2, 0) MSE=3114.559287333377\n",
-      "ARIMA(1, 2, 1) MSE=857.0494772995066\n",
-      "ARIMA(1, 2, 2) MSE=823.200991972517\n",
-      "ARIMA(1, 2, 3) MSE=818.212852118117\n",
-      "ARIMA(1, 2, 4) MSE=865.8985284926171\n",
-      "ARIMA(1, 2, 5) MSE=859.9893202981752\n",
-      "ARIMA(2, 0, 0) MSE=798.0925966406758\n",
-      "ARIMA(2, 0, 1) MSE=766.3551152839472\n",
-      "ARIMA(2, 0, 2) MSE=761.900619515927\n",
-      "ARIMA(2, 0, 3) MSE=831.0564438622511\n",
-      "ARIMA(2, 0, 4) MSE=890.4534654349047\n",
-      "ARIMA(2, 0, 5) MSE=823.9129405639289\n",
-      "ARIMA(2, 1, 0) MSE=810.1611542191863\n",
-      "ARIMA(2, 1, 1) MSE=778.873043634159\n",
-      "ARIMA(2, 1, 2) MSE=823.1997676890383\n",
-      "ARIMA(2, 1, 3) MSE=860.4050309948154\n",
-      "ARIMA(2, 1, 4) MSE=844.3702175339653\n",
-      "ARIMA(2, 1, 5) MSE=785.3579195663403\n",
-      "ARIMA(2, 2, 0) MSE=2684.1347267927076\n",
-      "ARIMA(2, 2, 1) MSE=840.7168820872785\n",
-      "ARIMA(2, 2, 2) MSE=823.3212110223261\n",
-      "ARIMA(2, 2, 3) MSE=820.6605742630255\n",
-      "ARIMA(2, 2, 4) MSE=805.865769751854\n",
-      "ARIMA(2, 2, 5) MSE=855.4630287714635\n",
-      "ARIMA(3, 0, 0) MSE=785.620978051191\n",
-      "ARIMA(3, 0, 1) MSE=766.067829343297\n",
-      "ARIMA(3, 0, 2) MSE=769.0337930125311\n",
-      "ARIMA(3, 0, 3) MSE=752.3370673675803\n",
-      "ARIMA(3, 0, 4) MSE=822.4663113363189\n",
-      "ARIMA(3, 0, 5) MSE=825.4667292769753\n",
-      "ARIMA(3, 1, 0) MSE=836.4461417994393\n",
-      "ARIMA(3, 1, 1) MSE=886.13763984046\n",
-      "ARIMA(3, 1, 2) MSE=871.7006275342455\n",
-      "ARIMA(3, 1, 3) MSE=817.20291352133\n",
-      "ARIMA(3, 1, 4) MSE=792.2276128893874\n",
-      "ARIMA(3, 1, 5) MSE=764.6055924368721\n",
-      "ARIMA(3, 2, 0) MSE=3129.187598484393\n",
-      "ARIMA(3, 2, 1) MSE=864.0451192638095\n",
-      "ARIMA(3, 2, 2) MSE=797.9198711967192\n",
-      "ARIMA(3, 2, 3) MSE=775.8903806203997\n",
-      "ARIMA(3, 2, 4) MSE=815.8549833132365\n",
-      "ARIMA(3, 2, 5) MSE=846.5508073807374\n",
-      "ARIMA(4, 0, 0) MSE=807.7773954236543\n",
-      "ARIMA(4, 0, 1) MSE=746.2549612080938\n",
-      "ARIMA(4, 0, 2) MSE=824.6862927202726\n",
-      "ARIMA(4, 0, 3) MSE=756.5771750110208\n",
-      "ARIMA(4, 0, 4) MSE=782.7047015819169\n",
-      "ARIMA(4, 0, 5) MSE=765.4900036863312\n",
-      "ARIMA(4, 1, 0) MSE=897.4944999394949\n",
-      "ARIMA(4, 1, 1) MSE=887.195534143377\n",
-      "ARIMA(4, 1, 2) MSE=849.7337777638359\n",
-      "ARIMA(4, 1, 3) MSE=817.4461788786949\n",
-      "ARIMA(4, 1, 4) MSE=803.8056157305102\n",
-      "ARIMA(4, 1, 5) MSE=760.7746234679186\n",
-      "ARIMA(4, 2, 0) MSE=3123.2950849145327\n",
-      "ARIMA(4, 2, 1) MSE=925.2674289125159\n",
-      "ARIMA(4, 2, 2) MSE=872.0397692110961\n",
-      "ARIMA(4, 2, 3) MSE=855.7234953977785\n",
-      "ARIMA(4, 2, 4) MSE=842.2433845704696\n",
-      "ARIMA(4, 2, 5) MSE=833.4728395854058\n",
-      "ARIMA(5, 0, 0) MSE=893.6657623481578\n",
-      "ARIMA(5, 0, 1) MSE=823.4604446991375\n",
-      "ARIMA(5, 0, 2) MSE=805.8585921930959\n",
-      "ARIMA(5, 0, 3) MSE=749.9118568898733\n",
-      "ARIMA(5, 0, 4) MSE=784.7823737599941\n",
-      "ARIMA(5, 0, 5) MSE=739.9068388516391\n",
-      "ARIMA(5, 1, 0) MSE=885.5642307838816\n",
-      "ARIMA(5, 1, 1) MSE=858.6523505062601\n",
-      "ARIMA(5, 1, 2) MSE=810.7618750623159\n",
-      "ARIMA(5, 1, 3) MSE=809.6987356862205\n",
-      "ARIMA(5, 1, 4) MSE=790.1686992678779\n",
-      "ARIMA(5, 1, 5) MSE=754.0311714038558\n",
-      "ARIMA(5, 2, 0) MSE=3085.8533507100956\n",
-      "ARIMA(5, 2, 1) MSE=912.2864401863364\n",
-      "ARIMA(5, 2, 2) MSE=924.1021714417404\n",
-      "ARIMA(5, 2, 3) MSE=831.4499491578916\n",
-      "ARIMA(5, 2, 4) MSE=816.4683134073455\n",
-      "ARIMA(5, 2, 5) MSE=863.4576623485578\n"
+      "ARIMA(0, 0, 0) MSE=55106.010355654595\n",
+      "ARIMA(0, 0, 1) MSE=35581.28208668231\n",
+      "ARIMA(0, 0, 2) MSE=21319.79364960389\n",
+      "ARIMA(0, 0, 3) MSE=6342.788684113457\n",
+      "ARIMA(0, 0, 4) MSE=3168.1251557528476\n",
+      "ARIMA(0, 0, 5) MSE=1564.8766981290637\n",
+      "ARIMA(0, 1, 0) MSE=17.65625\n",
+      "ARIMA(0, 1, 1) MSE=21.784265030014737\n",
+      "ARIMA(0, 1, 2) MSE=26.263054311721934\n",
+      "ARIMA(0, 1, 3) MSE=26.912379640602435\n",
+      "ARIMA(0, 1, 4) MSE=28.614155168169546\n",
+      "ARIMA(0, 1, 5) MSE=27.16453512698456\n",
+      "ARIMA(0, 2, 0) MSE=141.25000000191176\n",
+      "ARIMA(0, 2, 1) MSE=19.57293629550798\n",
+      "ARIMA(0, 2, 2) MSE=23.91313035689259\n",
+      "ARIMA(0, 2, 3) MSE=28.779186893218245\n",
+      "ARIMA(0, 2, 4) MSE=28.62648547467621\n",
+      "ARIMA(0, 2, 5) MSE=29.739965844944305\n",
+      "ARIMA(1, 0, 0) MSE=17.205874300923025\n",
+      "ARIMA(1, 0, 1) MSE=19.42817921123807\n",
+      "ARIMA(1, 0, 2) MSE=25.439719966211875\n",
+      "ARIMA(1, 0, 3) MSE=26.633305166541525\n",
+      "ARIMA(1, 0, 4) MSE=27.7160216054271\n",
+      "ARIMA(1, 0, 5) MSE=26.40677243132011\n",
+      "ARIMA(1, 1, 0) MSE=20.474000645659668\n",
+      "ARIMA(1, 1, 1) MSE=23.852010723222026\n",
+      "ARIMA(1, 1, 2) MSE=26.435227239674376\n",
+      "ARIMA(1, 1, 3) MSE=25.912972086435573\n",
+      "ARIMA(1, 1, 4) MSE=28.229860604738555\n",
+      "ARIMA(1, 1, 5) MSE=29.39297495170143\n",
+      "ARIMA(1, 2, 0) MSE=25.561637396534813\n",
+      "ARIMA(1, 2, 1) MSE=22.470499380334594\n",
+      "ARIMA(1, 2, 2) MSE=26.060630847577574\n",
+      "ARIMA(1, 2, 3) MSE=22.50599804105959\n",
+      "ARIMA(1, 2, 4) MSE=33.59429244430787\n",
+      "ARIMA(1, 2, 5) MSE=28.566664505367978\n",
+      "ARIMA(2, 0, 0) MSE=18.553217810485123\n",
+      "ARIMA(2, 0, 1) MSE=21.574049012584013\n",
+      "ARIMA(2, 0, 2) MSE=25.817364172987364\n",
+      "ARIMA(2, 0, 3) MSE=32.54693787972637\n",
+      "ARIMA(2, 0, 4) MSE=27.742659160103308\n",
+      "ARIMA(2, 0, 5) MSE=30.62027185464317\n",
+      "ARIMA(2, 1, 0) MSE=28.175072449778003\n",
+      "ARIMA(2, 1, 1) MSE=27.793994872142623\n",
+      "ARIMA(2, 1, 2) MSE=33.556672827895476\n",
+      "ARIMA(2, 1, 3) MSE=29.695856685191252\n",
+      "ARIMA(2, 1, 4) MSE=29.201298217364574\n",
+      "ARIMA(2, 1, 5) MSE=31.193862896794773\n",
+      "ARIMA(2, 2, 0) MSE=104.43170366719895\n",
+      "ARIMA(2, 2, 1) MSE=30.93801066071882\n",
+      "ARIMA(2, 2, 2) MSE=21.05285518660561\n",
+      "ARIMA(2, 2, 3) MSE=21.311767288234634\n",
+      "ARIMA(2, 2, 4) MSE=24.77720213400533\n",
+      "ARIMA(2, 2, 5) MSE=20.789486454865084\n",
+      "ARIMA(3, 0, 0) MSE=27.345361087029545\n",
+      "ARIMA(3, 0, 1) MSE=25.99079829788208\n",
+      "ARIMA(3, 0, 2) MSE=18.599400955037673\n",
+      "ARIMA(3, 0, 3) MSE=24.52375815189496\n",
+      "ARIMA(3, 0, 4) MSE=29.343990020715303\n",
+      "ARIMA(3, 0, 5) MSE=30.634611888048003\n",
+      "ARIMA(3, 1, 0) MSE=26.182434681138254\n",
+      "ARIMA(3, 1, 1) MSE=26.8112422433573\n",
+      "ARIMA(3, 1, 2) MSE=26.156885717845114\n",
+      "ARIMA(3, 1, 3) MSE=28.340144273904247\n",
+      "ARIMA(3, 1, 4) MSE=30.773510837431996\n",
+      "ARIMA(3, 1, 5) MSE=31.0797453555125\n",
+      "ARIMA(3, 2, 0) MSE=74.43360790268129\n",
+      "ARIMA(3, 2, 1) MSE=27.909280322441216\n",
+      "ARIMA(3, 2, 2) MSE=34.3688254593434\n",
+      "ARIMA(3, 2, 3) MSE=25.144221567558482\n",
+      "ARIMA(3, 2, 4) MSE=34.71806117855863\n",
+      "ARIMA(3, 2, 5) MSE=34.08952418104149\n",
+      "ARIMA(4, 0, 0) MSE=25.745966476070443\n",
+      "ARIMA(4, 0, 1) MSE=31.125500850529207\n",
+      "ARIMA(4, 0, 2) MSE=17.18843228860831\n",
+      "ARIMA(4, 0, 3) MSE=25.661315895826665\n",
+      "ARIMA(4, 0, 4) MSE=26.74950618611493\n",
+      "ARIMA(4, 0, 5) MSE=29.259569381417695\n",
+      "ARIMA(4, 1, 0) MSE=30.17810476916866\n",
+      "ARIMA(4, 1, 1) MSE=29.780559700509905\n",
+      "ARIMA(4, 1, 2) MSE=27.84835737443418\n",
+      "ARIMA(4, 1, 3) MSE=29.005044836054815\n",
+      "ARIMA(4, 1, 4) MSE=27.246520791386434\n",
+      "ARIMA(4, 1, 5) MSE=30.756076706405114\n",
+      "ARIMA(4, 2, 0) MSE=28.084106768759856\n",
+      "ARIMA(4, 2, 1) MSE=31.804182711539607\n",
+      "ARIMA(4, 2, 2) MSE=31.25675129044034\n",
+      "ARIMA(4, 2, 3) MSE=25.70870003535937\n",
+      "ARIMA(4, 2, 4) MSE=27.697486826350335\n",
+      "ARIMA(4, 2, 5) MSE=25.888988306377883\n",
+      "ARIMA(5, 0, 0) MSE=28.690715974532548\n",
+      "ARIMA(5, 0, 1) MSE=28.315855325727114\n",
+      "ARIMA(5, 0, 2) MSE=18.342939146396553\n",
+      "ARIMA(5, 0, 3) MSE=24.621442616952518\n",
+      "ARIMA(5, 0, 4) MSE=30.5945059052396\n",
+      "ARIMA(5, 0, 5) MSE=29.48592697303405\n",
+      "ARIMA(5, 1, 0) MSE=28.589011237549865\n",
+      "ARIMA(5, 1, 1) MSE=26.75558073253945\n",
+      "ARIMA(5, 1, 2) MSE=30.182441051649512\n",
+      "ARIMA(5, 1, 3) MSE=32.04387787423989\n",
+      "ARIMA(5, 1, 4) MSE=31.797036928447984\n",
+      "ARIMA(5, 1, 5) MSE=31.412468744471507\n",
+      "ARIMA(5, 2, 0) MSE=31.36845188030589\n",
+      "ARIMA(5, 2, 1) MSE=30.33889615847265\n",
+      "ARIMA(5, 2, 2) MSE=31.337512319847356\n",
+      "ARIMA(5, 2, 3) MSE=22.721425265471055\n",
+      "ARIMA(5, 2, 4) MSE=30.744851205170903\n",
+      "ARIMA(5, 2, 5) MSE=20.760347757179197\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Best ARIMA order: (5, 0, 5)'"
+       "'Best ARIMA order: (4, 0, 2)'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +546,7 @@
     "q_values = range(0, 6)\n",
     "\n",
     "# Set forecast length\n",
-    "forecast_length = 5\n",
+    "forecast_length = 2\n",
     "\n",
     "# Prepare data for prediction by dropping the last forecast_length rows\n",
     "prediction_df = data.copy(deep=True)\n",
@@ -562,24 +561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set forecast length\n",
-    "forecast_length = 2\n",
-    "\n",
-    "# Prepare data for prediction by dropping the last 5 rows\n",
-    "prediction_df = data.copy(deep=True)\n",
-    "prediction_df.drop(prediction_df.tail(forecast_length).index, inplace=True)\n",
-    "\n",
     "# Get predictions with the best ARIMA order\n",
     "forecast_high, forecast_low = predict_stock_high_low(prediction_df, best_order, forecast_length)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -5169,8 +5161,8 @@
           null,
           null,
           null,
-          312.601683924884,
-          311.3436630531179
+          311.0328589687384,
+          310.7276241785927
          ]
         },
         {
@@ -9729,8 +9721,8 @@
           null,
           null,
           null,
-          295.834232022253,
-          294.8731300482315
+          297.03384410985586,
+          297.03099356756655
          ]
         }
        ],
@@ -10584,7 +10576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -10647,15 +10639,15 @@
        "      <th>2023-07-28</th>\n",
        "      <td>312.80</td>\n",
        "      <td>301.60</td>\n",
-       "      <td>312.601684</td>\n",
-       "      <td>295.834232</td>\n",
+       "      <td>311.032859</td>\n",
+       "      <td>297.033844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-07-31</th>\n",
        "      <td>307.65</td>\n",
        "      <td>288.10</td>\n",
-       "      <td>311.343663</td>\n",
-       "      <td>294.873130</td>\n",
+       "      <td>310.727624</td>\n",
+       "      <td>297.030994</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -10667,18 +10659,25 @@
        "2023-07-25  322.90  294.15            NaN           NaN\n",
        "2023-07-26  305.45  295.35            NaN           NaN\n",
        "2023-07-27  310.95  297.60            NaN           NaN\n",
-       "2023-07-28  312.80  301.60     312.601684    295.834232\n",
-       "2023-07-31  307.65  288.10     311.343663    294.873130"
+       "2023-07-28  312.80  301.60     311.032859    297.033844\n",
+       "2023-07-31  307.65  288.10     310.727624    297.030994"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.tail()"
+    "data[['high','low','forecast_high','forecast_low']].tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
